projects/examples/source/02.38.cpp
/////////////////////////////////////////////////////

#include <print>

/////////////////////////////////////////////////////

void test_v1(int x, int y = 0)
{ 
	std::print("test_v1 : x = {} y = {}\n", x, y);
}

/////////////////////////////////////////////////////

// void test_v2(int x = 0, int y) // error
// { 
//     std::print("test_v2 : x = {} y = {}\n", x, y);
// }

/////////////////////////////////////////////////////

int main()
{
    test_v1(1   );

    test_v1(1, 2);

//  test_v2(1   ); // error

//  test_v2(1, 2); // error
}

/////////////////////////////////////////////////////